--- a/style.css
+++ b/style.css
@@ -1,14 +1,30 @@
-name_avatar {
-    margin: center;
-    max-width: 1200px;
+body{
+    background-color: aquamarine;
 }
-ava, name{
+.CV{
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1200px;
+    min-width: 300px;
+}
+.name_avatar {
+    margin: center;
+    /* max-width: 1200px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-ava{
+.ava{
     width: 50%;
     height: 50%;
     padding: 30px;
+    border-radius: 40px;
+}
+.name{
+    margin: auto;
+}
+.skills{
+    margin-left: auto;
+    margin-right: auto;
 }
