--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 }
 .CV{
     border-radius: 5px;
-    background-color: #5FA8D3;
+    background-color: #CAE9FF;
     /* width: 80%; */
     margin-left: auto;
     margin-right: auto;
