--- a/style2.css
+++ b/style2.css
@@ -10,51 +10,69 @@ body{
 }
 .CV{
     border-radius: 5px;
-    background-color: #5FA8D3;
+    background-color: #CAE9FF;
     /* width: 80%; */
     margin-left: auto;
     margin-right: auto;
-    max-width: 500px;
+    max-width: 600px;
     min-width: 300px;
-    display: block;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.message {
-    padding: 100px;
-    /* object-position: center; */
-}
-
-.message a{
-    background-color:#CAE9FF ;
-    border: 2px solid #CAE9FF;
-    border-radius: 5px;
-    margin-left: auto;
-    margin-right: auto;
-    text-decoration: none;
-    text-transform: uppercase;
-    color: black;
-}
-.message input{
-    display: block;
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
 }
 .nav{
     text-decoration: none;
     color: black;
-    padding-left: 100px;
     padding-top: 50px;
+    /* width: 100%; */
+    margin-left: 70px;
+    padding-left: auto;;
 }
+
+h1{
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+}
+
+.message {
+    display: grid;
+    grid-template-columns: 150px 10px 300px;
+    grid-template-rows: 40px 40px 100px;
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 300px;
+    padding-bottom: 20px;
+    /* object-position: center; */
+}
+
+.message *{
+    height: 45%;
+}
+
+.mescontent{
+    height: 100%;
+}
+
 /* .from, .title, .mesTA {
     font-size:
 } */
-.sendbutton{
-    
-}
 .nav a{
     color: black;
 }
 .mesTA{
     width: 100%;
+}
+
+.sendbutton{
+    padding: 5px;
+    margin-left: auto;
+    margin-right: auto; 
+    margin-bottom: 50px;
+}
+
+.req{
+    color: red;
 }
